# KuntaraValuation

./: .gitignore  README.md  pyproject.toml
configs/: config.yaml
configs/data/: default.yaml  edgar.yaml  images.yaml
configs/model/: bhar_cross_attention.yaml  cross_attention.yaml
configs/training/: default.yaml
notebooks/: reproduce_ablation_table.py
outputs/bhar/: all_bhar_ablation_results.csv  cv_results.csv  dm_tests.csv  fold_predictions.csv  horizon_sample_summary.csv  portfolio_sorts.csv  rank_ic_and_sharpe_ci.csv  sic_fe_check.csv
outputs/bhar/crsp/: horizon_sample_summary_crsp.csv  universe_permno_crosswalk.csv
scripts/: build_crsp_request.py  build_ritter_universe.py  compute_bhar.py  generate_cik_list.py  rank_ic_and_bootstrap.py  rebuild_portfolio_sorts.py  run_bhar_ablations.py  run_bhar_cv.py  run_bhar_pipeline.py  run_crsp_bhar.py  run_diagnostics.py  run_full_pipeline.sh  run_modeling_pipeline.py
src/: __init__.py
src/analysis/: __init__.py  attributions.py  case_studies.py  figures.py  regression_analysis.py  tables.py  visual_factors.py
src/baselines/: __init__.py  classical.py  gbm_baseline.py
src/data/: __init__.py  bhar.py  crsp_loader.py  dataset.py  edgar_cik_lookup.py  edgar_scraper.py  extract_offer_price.py  fetch_post_ipo_returns.py  fetch_s1_financials.py  image_pipeline.py  ipo_universe.py  private_firms.py  ritter_parser.py  verify_cik_mappings.py
src/evaluation/: __init__.py  metrics.py  run_eval.py  statistical_tests.py
src/features/: __init__.py  image_encoder.py  tabular_encoder.py  text_encoder.py
src/models/: __init__.py  fusion.py  heads.py  multimodal.py
src/training/: __init__.py  ablations.py  trainer.py
tests/: test_core.py
